completed accordion menu

--- a/Projects/Project 2/index.html
+++ b/Projects/Project 2/index.html
@@ -101,7 +101,7 @@
 			                    <li><a href="#explore">explore</a></li>
 			                    <li><a href="#blog">blog</a></li>
 								<li><a href="#account">my account</a></li>
-								<li><a href="#"><button href="#" class="dark-mode" id="dark-mode"><i class="fa-solid fa-moon"></i></button></a></li>
+								<li><button href="#" class="dark-mode" id="dark-mode"><i class="fa-solid fa-moon"></i></button></li>
 			                </ul>
 			            </div>
 			        </div>
