--- a/Projects/Project 2/tpl/account.html
+++ b/Projects/Project 2/tpl/account.html
@@ -17,7 +17,7 @@
                 <input type="password" class="form-control" id="password" name="password" placeholder="Password">
             </div>
             <div class="form-group">
-                <button type="submit" class="btn" style="background-color: var(--highlight); color: var(--background-primary);">Submit</button>
+                <button type="submit" class="btn account-submit-btn">Submit</button>
             </div>
         </form>
     </div>
