completed offers json load into explore

--- a/Projects/Project 2/tpl/explore.html
+++ b/Projects/Project 2/tpl/explore.html
@@ -32,148 +32,7 @@
         </div>
 
         <div class="explore-content">
-            <ul class="list-group">
-                <li class="list-group-item">
-                    <div class="card mb-3" style="max-width: auto;">
-                        <div class="row g-0">
-                          <div class="col-md-3">
-                            <img src="assets/images/explore/e1.jpg" class="img-fluid rounded-start" alt="...">
-                          </div>
-                          <div class="col-md-9">
-                            <div class="card-body">
-                              <h5 class="card-title single-explore-txt bg-theme-1">tommy hilfiger bar</h5>
-                              <p class="card-text" style="margin-right: 20px;">
-                                🍸👔 Step into Style at Tommy's Bar by Hilfiger! 👔🍸
-                                Experience the epitome of sophistication and style at Tommy's Bar, the latest venture from fashion icon Tommy Hilfiger. 
-                              </p>
-                              <p class="card-text"><small class="text-body-secondary">
-                                <span>
-                                    From <span class="explore-price">5$-300$</span>
-                                </span>
-                              </small></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="card mb-3" style="max-width: auto;">
-                        <div class="row g-0">
-                          <div class="col-md-3">
-                            <img src="assets\images\explore\e2.jpg" class="img-fluid rounded-start" alt="...">
-                          </div>
-                          <div class="col-md-9">
-                            <div class="card-body">
-                              <h5 class="card-title single-explore-txt bg-theme-2">swim and dine resort</h5>
-                              <p class="card-text" style="margin-right: 20px;">
-                                🌊🍽️ Dive into Luxury at AquaEats Resort! 🍽️🌊
-                                Escape to paradise at AquaEats, where the crystal-clear waters of our private beach meet world-class 
-                                dining for an unforgettable experience.
-                              </p>
-                              <p class="card-text"><small class="text-body-secondary">
-                                <span>
-                                    From <span class="explore-price">50$-500$</span>
-                                </span>
-                              </small></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="card mb-3" style="max-width: auto;">
-                        <div class="row g-0">
-                          <div class="col-md-3">
-                            <img src="assets/images/explore/e3.jpg" class="img-fluid rounded-start" alt="...">
-                          </div>
-                          <div class="col-md-9">
-                            <div class="card-body">
-                              <h5 class="card-title single-explore-txt bg-theme-3">europe tour</h5>
-                              <p class="card-text" style="margin-right: 20px;">
-                                🌍✈️ Explore the Charms of Europe! ✈️🌍
-                                Embark on an unforgettable journey through the heart of Europe with our exclusive tour package! 
-                                Immerse yourself in the rich tapestry of history, culture, and breathtaking landscapes. 
-                              </p>
-                              <p class="card-text"><small class="text-body-secondary">
-                                <span>
-                                    From <span class="explore-price">5k$-10k$</span>
-                                </span>
-                              </small></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="card mb-3" style="max-width: auto;">
-                        <div class="row g-0">
-                          <div class="col-md-3">
-                            <img src="assets/images/explore/e4.jpg" class="img-fluid rounded-start" alt="...">
-                          </div>
-                          <div class="col-md-9">
-                            <div class="card-body">
-                              <h5 class="card-title single-explore-txt bg-theme-4">bungalow with swiming pool</h5>
-                              <p class="card-text" style="margin-right: 20px;">
-                                🌴🏠 Welcome to Paradise: Bungalow Bliss with a Private Pool! 🏊🌴
-                                Escape to your own slice of tropical paradise with our luxurious bungalow retreat, where relaxation 
-                                and rejuvenation await at every turn.
-                              </p>
-                              <p class="card-text"><small class="text-body-secondary">
-                                <span>
-                                  From <span class="explore-price">10k$-15k$</span>
-                              </span>
-                              </small></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="card mb-3" style="max-width: auto;">
-                        <div class="row g-0">
-                          <div class="col-md-3">
-                            <img src="assets/images/explore/e5.jpg" class="img-fluid rounded-start" alt="...">
-                          </div>
-                          <div class="col-md-9">
-                            <div class="card-body">
-                              <h5 class="card-title single-explore-txt bg-theme-2">vintage car expo</h5>
-                              <p class="card-text" style="margin-right: 20px;">
-                                🚗🎩 Step Back in Time: Vintage Car Expo 2024! 🎩🚗
-                                🎩 Immerse yourself in the golden age of motoring as you stroll through rows of meticulously restored 
-                                vintage cars, each one a masterpiece of design and engineering from a bygone era.
-                              </p>
-                              <p class="card-text"><small class="text-body-secondary">
-                                <span>
-                                  From <span class="explore-price">500$-1200$</span>
-                              </span>
-                              </small></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="card mb-3" style="max-width: auto;">
-                        <div class="row g-0">
-                          <div class="col-md-3">
-                            <img src="assets/images/explore/e6.jpg" class="img-fluid rounded-start" alt="...">
-                          </div>
-                          <div class="col-md-9">
-                            <div class="card-body">
-                              <h5 class="card-title single-explore-txt bg-theme-5">thailand tour</h5>
-                              <p class="card-text" style="margin-right: 20px;">🌴🇹🇭 Discover the Treasures of Thailand: A Journey Through Paradise! 🇹🇭🌴
-                                Embark on the adventure of a lifetime with our exclusive Thailand tour, where ancient wonders, vibrant culture, and breathtaking landscapes await at every turn.</p>
-                              <p class="card-text"><small class="text-body-secondary">
-                                <span>
-                                  From <span class="explore-price">5k$-10k$</span>
-                              </span>
-                              </small></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                </li>
-              </ul>
+            <ul class="list-group" id="explore-list"></ul>
         </div>
     </div>
 </section>
@@ -193,4 +52,30 @@
       } 
     });
   }
+
+  fetchOffersFromFile();
+  function fetchOffersFromFile(){
+    $.ajax({
+      url: '/Foundations-of-Frontend-Web-Dev/Projects/Project 2/data/offers.json',
+      type: 'GET',
+      dataType: 'json',
+      success: function(data){
+        console.log(data);
+        let html = "";
+        data.forEach(element => {
+          html += "<li class='list-group-item'><div class='card mb-3' style='max-width: auto;'><div class='row g-0'>" +              
+                            "<div class='col-md-3'><img src=" + element.imgSrc + " class='img-fluid rounded-start'>" +
+                            "</div><div class='col-md-9'><div class='card-body'><h5 class='card-title single-explore-txt bg-theme-5'>" +
+                            element.cardTitle + "</h5><p class='card-text' style='margin-right: 20px;'>" + element.cardText +
+                            "</p><p class='card-text'><small class='text-body-secondary'><span>" + element.cardSmallText +
+                            "</span></small></p></div></div></div></div></li>";
+        });
+        $("#explore-list").html(html);
+      },
+      error: function(xhr, status, error){
+        console.error('Error fetching data from file : ', error);
+      }
+    })
+  }
+
 </script>
