added offers service

--- a/Projects/Project 2/index.html
+++ b/Projects/Project 2/index.html
@@ -81,6 +81,9 @@
 		<!-- jQuery BlockUI -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js"></script>
 
+		<!-- Offers Service -->
+		<script src="services/offers-service.js"></script>
+
     </head>
 	
 	<body>
@@ -114,7 +117,7 @@
 			<section id="explore"></section>
 			<section id="blog"></section>
 			<section id="account"></section>
-			<section id="home"></section>
+			<section id="home" data-load="home.html"></section>
 		</main>
 
     </body>
