added blog page and service

--- a/Projects/Project 2/index.html
+++ b/Projects/Project 2/index.html
@@ -84,6 +84,9 @@
 		<!-- Offers Service -->
 		<script src="services/offers-service.js"></script>
 
+		<!-- Blogs Service-->
+		<script src="services/blog-service.js"></script>
+
     </head>
 	
 	<body>
