--- a/Projects/Project 2/tpl/home.html
+++ b/Projects/Project 2/tpl/home.html
@@ -895,7 +895,7 @@
 
 
 <!--blog start -->
-<section id="blog" class="blog" >
+<section id="blog-home" class="blog" >
     <div class="container">
         <div class="section-header">
             <h2>news and articles</h2>
