--- a/Projects/Project 2/tpl/account.html
+++ b/Projects/Project 2/tpl/account.html
@@ -1,25 +1,57 @@
 <section id="account" class="account">
     <div class="container">
-        <div class="section-header">
-            <h2>sign in</h2>
-        </div>
-        <form id="myForm">
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Name" value="">
-            </div>
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="Email" value="">
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Password">
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn account-submit-btn">Submit</button>
-            </div>
-        </form>
+		<div class="side-by-side">
+
+			<div class="side-left">
+				<div class="section-header">
+					<h2>log in</h2>
+					<p>if you're already a member</p>
+				</div>
+				<form id="login-form" class="account-form">
+					<div class="form-group">
+						<label for="name">Name:</label>
+						<input type="text" class="form-control" id="name" name="name" placeholder="Name" value="">
+					</div>
+					<div class="form-group">
+						<label for="email">Email:</label>
+						<input type="email" class="form-control" id="email" name="email" placeholder="Email" value="">
+					</div>
+					<div class="form-group">
+						<label for="password">Password:</label>
+						<input type="password" class="form-control" id="password" name="password" placeholder="Password">
+					</div>
+					<div class="form-group">
+						<button type="submit" class="btn account-submit-btn">Submit</button>
+					</div>
+				</form>
+			</div>
+
+			<div class="vertical-line"></div>
+
+			<div class="side-right">
+				<div class="section-header">
+					<h2>sign up</h2>
+					<p>to become a member</p>
+				</div>
+				<form id="sign-up-form" class="account-form">
+					<div class="form-group">
+						<label for="name">Name:</label>
+						<input type="text" class="form-control" id="name1" name="name" placeholder="Name" value="">
+					</div>
+					<div class="form-group">
+						<label for="email">Email:</label>
+						<input type="email" class="form-control" id="email1" name="email" placeholder="Email" value="">
+					</div>
+					<div class="form-group">
+						<label for="password">Password:</label>
+						<input type="password" class="form-control" id="password1" name="password" placeholder="Password">
+					</div>
+					<div class="form-group">
+						<button type="submit" class="btn account-submit-btn">Submit</button>
+					</div>
+				</form>
+			</div>
+		</div>
     </div>
 </section>
 
@@ -29,7 +61,7 @@
 		return /^(?=.*[a-z])(?=.*[A-Z]).{5,}$/.test(value);
 	}, "Password must contain at least one lowercase letter, one uppercase letter, and be at least 5 characters long");
   
-	$("#myForm").validate({
+	$("#login-form").validate({
 		rules: {
             name: {
                 required: true
