added profile section

--- a/Projects/Project 2/index.html
+++ b/Projects/Project 2/index.html
@@ -87,6 +87,9 @@
 		<!-- Blogs Service-->
 		<script src="services/blog-service.js"></script>
 
+		<!--Accoutn Service-->
+		<script src="services/account-service.js"></script>
+
     </head>
 	
 	<body>
