--- a/Projects/Project 2/tpl/account.html
+++ b/Projects/Project 2/tpl/account.html
@@ -1,56 +1,33 @@
 <section id="account" class="account">
     <div class="container">
-		<div class="side-by-side">
-
-			<div class="side-left">
-				<div class="section-header">
-					<h2>log in</h2>
-					<p>if you're already a member</p>
-				</div>
-				<form id="login-form" class="account-form">
-					<div class="form-group">
-						<label for="name">Name:</label>
-						<input type="text" class="form-control" id="name" name="name" placeholder="Name" value="">
-					</div>
-					<div class="form-group">
-						<label for="email">Email:</label>
-						<input type="email" class="form-control" id="email" name="email" placeholder="Email" value="">
-					</div>
-					<div class="form-group">
-						<label for="password">Password:</label>
-						<input type="password" class="form-control" id="password" name="password" placeholder="Password">
-					</div>
-					<div class="form-group">
-						<button type="submit" class="btn account-submit-btn">Submit</button>
-					</div>
-				</form>
+		<div id="sign-up-section">
+			<div class="section-header">
+				<h2>sign up</h2>
+				<p>to become a member</p>
 			</div>
-
-			<div class="vertical-line"></div>
-
-			<div class="side-right">
-				<div class="section-header">
-					<h2>sign up</h2>
-					<p>to become a member</p>
+			<form id="sign-up-form" class="account-form">
+				<div class="form-group">
+					<label for="name">Name:</label>
+					<input type="text" class="form-control" id="name" name="name" placeholder="Name" value="">
 				</div>
-				<form id="sign-up-form" class="account-form">
-					<div class="form-group">
-						<label for="name">Name:</label>
-						<input type="text" class="form-control" id="name1" name="name" placeholder="Name" value="">
-					</div>
-					<div class="form-group">
-						<label for="email">Email:</label>
-						<input type="email" class="form-control" id="email1" name="email" placeholder="Email" value="">
-					</div>
-					<div class="form-group">
-						<label for="password">Password:</label>
-						<input type="password" class="form-control" id="password1" name="password" placeholder="Password">
-					</div>
-					<div class="form-group">
-						<button type="submit" class="btn account-submit-btn">Submit</button>
-					</div>
-				</form>
-			</div>
+				<div class="form-group">
+					<label for="email">Email:</label>
+					<input type="email" class="form-control" id="email" name="email" placeholder="Email" value="">
+				</div>
+				<div class="form-group">
+					<label for="password">Password:</label>
+					<input type="password" class="form-control" id="password" name="password" placeholder="Password">
+				</div>
+				<div class="form-group">
+					<button type="submit" class="btn account-submit-btn">Submit</button>
+				</div>
+			</form>
+		</div>
+
+		<div id="profile-section" class="hidden">
+			<h2>Welcome, <span id="profile-name"></span></h2>
+			<p>This is your profile page.</p>
+			<button id="logout-button">Logout</button>
 		</div>
     </div>
 </section>
@@ -61,46 +38,6 @@
 		return /^(?=.*[a-z])(?=.*[A-Z]).{5,}$/.test(value);
 	}, "Password must contain at least one lowercase letter, one uppercase letter, and be at least 5 characters long");
   
-	$("#login-form").validate({
-		rules: {
-            name: {
-                required: true
-            },
-			email: {
-				required: true
-			},
-			password: {
-				required: true,
-				strongPassword: true,
-                maxlength: 20
-			}
-		},
-		messages: {
-			name: {
-				required: "Please enter your name"
-			},
-            email: {
-                required: "Please enter your email"
-            },
-		  	password: {
-				required: "Please enter your password",
-                maxlength: "Your password cannot be longer than 20 characters"
-		  	}
-		},
-		submitHandler: function (form) {
-			try {
-				$.blockUI({ message: '<div class="spinner-border" role="status"><span class="visually-hidden">Loading...</span></div>'});
-	
-				setTimeout(function(){
-					console.log('time out')
-					$.unblockUI();
-				}, 2000)
-				
-			} catch (error) {
-				console.error('Error in submitHandler:', error);
-				alert('An error occurred. Please try again later.');
-				$.unblockUI();
-			}
-		}
-	});
+	AccountService.initFormValidation("#sign-up-form");
+	AccountService.showProfilePage();
 </script>
