--- a/Projects/Project 2/tpl/account.html
+++ b/Projects/Project 2/tpl/account.html
@@ -2,10 +2,9 @@
     <div class="container">
 		<div id="sign-up-section">
 			<div class="section-header">
-				<h2>sign up</h2>
-				<p>to become a member</p>
+				<h2>log in</h2>
 			</div>
-			<form id="sign-up-form" class="account-form">
+			<form id="login-form" class="account-form">
 				<div class="form-group">
 					<label for="name">Name:</label>
 					<input type="text" class="form-control" id="name" name="name" placeholder="Name" value="">
@@ -25,9 +24,40 @@
 		</div>
 
 		<div id="profile-section" class="hidden">
-			<h2>Welcome, <span id="profile-name"></span></h2>
+			<h2><i class="fa-regular fa-user"></i>  Welcome, <span id="profile-name"></span></h2>
 			<p>This is your profile page.</p>
+			<button id="edit-profile-btn">Edit Profile</button>
 			<button id="logout-button">Logout</button>
+
+			<div class="modal" id="editModal">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title">Edit Profile</h5>
+						</div>
+						<div class="modal-body">
+							<form id="edit-form" class="account-form">
+								<div class="form-group">
+									<label for="name">Name:</label>
+									<input type="text" class="form-control" id="edit-name" name="edit-name">
+								</div>
+								<div class="form-group">
+									<label for="email">Email:</label>
+									<input type="email" class="form-control" id="edit-email" name="edit-email">
+								</div>
+								<div class="form-group">
+									<label for="password">Password:</label>
+									<input type="password" class="form-control" id="edit-password" name="edit-password">
+								</div>
+							</form>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="close-edit-modal">Close</button>
+							<button type="button" class="btn btn-primary" id="save-changes">Save changes</button>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
     </div>
 </section>
@@ -38,5 +68,7 @@
 		return /^(?=.*[a-z])(?=.*[A-Z]).{5,}$/.test(value);
 	}, "Password must contain at least one lowercase letter, one uppercase letter, and be at least 5 characters long");
   
-	AccountService.initFormValidation("#sign-up-form");
+	AccountService.initFormValidation("#login-form");
+	AccountService.editProfile();
+
 </script>
