started view more

--- a/Projects/Project 2/index.html
+++ b/Projects/Project 2/index.html
@@ -120,6 +120,7 @@
 		</section>
 
 		<main id="spapp" role="main">
+			<section id="view-more"></section>
 			<section id="explore"></section>
 			<section id="blog"></section>
 			<section id="account"></section>
