--- a/Projects/Project 2/tpl/view-more.html
+++ b/Projects/Project 2/tpl/view-more.html
@@ -1,10 +1,18 @@
-<div id="offer-details" class="container">
-    <h1 id="offer-title"></h1>
-    <img id="offer-image" src="" alt="Offer Image" class="img-fluid">
-    <p id="offer-description"></p>
-    <div id="offer-options"></div>
-</div>
+<section id="view-more" class="view-more">
+    <div id="offer-details" class="container">
+        <div id="offer-main" class="row col-md-12"></div>
+        
+        <div class="secondary-container">
+            <div id="offer-options" class="col-md-6"></div>
 
-<script>
-    OffersService.populateViewMore();
-</script>
+            <div class="col-md-6 choose-date">
+                <h4>Choose the date</h4>
+                <label for="in-date">Check in : </label>
+                <input type="date" id="in-date" name="in-date">
+                <label for="out-date">Check out : </label>
+                <input type="date" id="out-date" name="out-date">
+                <button class="btn btn-primary reserve-btn" onclick="OffersService.reservationSuccess();">Make a Reservation</button>
+            </div>
+        </div>
+    </div>
+</section>
