--- a/Projects/Project 2/index.html
+++ b/Projects/Project 2/index.html
@@ -90,6 +90,10 @@
 		<!--Accoutn Service-->
 		<script src="services/account-service.js"></script>
 
+		<!--Utils-->
+		<script src="utils/constants.js"></script>
+		<script src="utils/rest-client.js"></script>
+
     </head>
 	
 	<body>
